03-infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: k8s-assign
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeName: worker1
      containers:
        - name: mariadb
          image: mariadb:11.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: k8s-assign
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: k8s-assign
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      nodeName: master
      containers:
        - name: mongo
          image: mongo:4.4
          command: ["mongod", "--bind_ip_all", "--auth"]
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: k8s-assign
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: k8s-assign
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      nodeName: master
      containers:
        - name: kafka
          image: bashj79/kafka-kraft:latest
          ports:
            - containerPort: 9092
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: k8s-assign
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: client
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
